--- a/frontend/src/styles/calendar.css
+++ b/frontend/src/styles/calendar.css
@@ -1,10 +1,44 @@
 
-.content:enabled:focus {
-    
-        font-size: 20px;
-        font-weight: bold;
-        color:rgb(197, 21, 21)
+.focusDay:enabled:focus {
+      font-weight: bold;
+      color:#bc5a45;
+      background-color: #F7F7F7;
         
   }
+.selectedDays {
+      color:#bc5a45;
+      border: 0.5px solid #bc5a45;
+      background-color: #F7F7F7;
+      border-radius: 5px;
+      margin: 2px;
+}
+
+.day {
+      color: #034f84;
+      background-color: #b7d7e8;
+      border: 0.5px solid #034f84;
+      border-radius: 5px;
+      margin: 2px;
+}
+
+.calendar {
+      height: 200px;
+      width: 200px;
+      font-weight: bold;
+      color:#b7d7e8;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+}
+
+.calendarButton {
+      height: 30px;
+      width: 200px;
+      color:#bc5a45;
+      border: 0.5px solid #bc5a45;
+      background-color: #F7F7F7;
+      border-radius: 5px;
+}
 
 
