Fixed AddPost component. Created Reservation type and resolvers.

--- a/frontend/src/styles/calendar.css
+++ b/frontend/src/styles/calendar.css
@@ -35,8 +35,8 @@
 .calendarButton {
       height: 30px;
       width: 200px;
-      color:#bc5a45;
-      border: 0.5px solid #bc5a45;
+      color: #618685;
+      border: 0.5px solid #618685;
       background-color: #F7F7F7;
       border-radius: 5px;
 }
